{
  "version": 4,
  "terraform_version": "1.7.4",
  "serial": 23,
  "lineage": "cb5cbc14-073b-bab2-a5ed-fefc4d9cb524",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "production_1_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05fcc80d057149a42",
            "arn": "arn:aws:ec2:ap-south-2:438384433488:instance/i-0f37baa8ed494cb0f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f37baa8ed494cb0f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "key-hydrabad",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-02067a59351cf43d9",
            "private_dns": "ip-10-0-2-26.ap-south-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.26",
            "public_dns": "ec2-18-61-27-162.ap-south-2.compute.amazonaws.com",
            "public_ip": "18.61.27.162",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02eb165c78147b276",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-019314a12f7c1d0ea",
            "tags": {
              "Name": "Production instance 1"
            },
            "tags_all": {
              "Name": "Production instance 1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e21ad06709472392"
            ]
          },
          "dependencies": [
            "aws_db_instance.rds_master",
            "aws_db_subnet_group.database_subnet",
            "aws_security_group.database-sg",
            "aws_security_group.production-instance-sg",
            "aws_subnet.database_private_subnet",
            "aws_subnet.database_read_replica_private_subnet",
            "aws_subnet.ec2_1_public_subnet",
            "aws_vpc.infrastructure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "production_2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05fcc80d057149a42",
            "arn": "arn:aws:ec2:ap-south-2:438384433488:instance/i-075f6d81b65b3f5cd",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-075f6d81b65b3f5cd",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "key-hydrabad",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04ecc0c441580e072",
            "private_dns": "ip-10-0-3-22.ap-south-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.22",
            "public_dns": "ec2-18-61-154-73.ap-south-2.compute.amazonaws.com",
            "public_ip": "18.61.154.73",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bc3ae4375c070aeb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d1aecf196e7a7f9a",
            "tags": {
              "Name": "Production instance 2"
            },
            "tags_all": {
              "Name": "Production instance 2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e21ad06709472392"
            ]
          },
          "dependencies": [
            "aws_db_instance.rds_master",
            "aws_db_subnet_group.database_subnet",
            "aws_security_group.database-sg",
            "aws_security_group.production-instance-sg",
            "aws_subnet.database_private_subnet",
            "aws_subnet.database_read_replica_private_subnet",
            "aws_subnet.ec2_2_public_subnet",
            "aws_vpc.infrastructure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "tier_architecture_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:438384433488:internet-gateway/igw-0060596877d5605cc",
            "id": "igw-0060596877d5605cc",
            "owner_id": "438384433488",
            "tags": {
              "Name": "2-tier-architecture-igw"
            },
            "tags_all": {
              "Name": "2-tier-architecture-igw"
            },
            "vpc_id": "vpc-0ef8faddeb6f8cf7b"
          },
          "dependencies": [
            "aws_vpc.infrastructure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "application_loadbalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:438384433488:loadbalancer/app/application-loadbalancer/e0ad24229dc042ff",
            "arn_suffix": "app/application-loadbalancer/e0ad24229dc042ff",
            "desync_mitigation_mode": "defensive",
            "dns_name": "application-loadbalancer-54002650.ap-south-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-2:438384433488:loadbalancer/app/application-loadbalancer/e0ad24229dc042ff",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "application-loadbalancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0e21ad06709472392"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-019314a12f7c1d0ea"
              },
              {
                "subnet_id": "subnet-0d1aecf196e7a7f9a"
              }
            ],
            "subnets": [
              "subnet-019314a12f7c1d0ea",
              "subnet-0d1aecf196e7a7f9a"
            ],
            "vpc_id": "vpc-0ef8faddeb6f8cf7b",
            "xff_header_processing_mode": "append",
            "zone_id": "Z0173938T07WNTVAEPZN"
          },
          "dependencies": [
            "aws_security_group.production-instance-sg",
            "aws_subnet.ec2_1_public_subnet",
            "aws_subnet.ec2_2_public_subnet",
            "aws_vpc.infrastructure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "external-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:438384433488:listener/app/application-loadbalancer/e0ad24229dc042ff/d95f67446c773a68",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-2:438384433488:targetgroup/target-group-alb/a965d2c4f13b56e9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-2:438384433488:listener/app/application-loadbalancer/e0ad24229dc042ff/d95f67446c773a68",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-2:438384433488:loadbalancer/app/application-loadbalancer/e0ad24229dc042ff",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.application_loadbalancer",
            "aws_lb_target_group.target_group_alb",
            "aws_security_group.production-instance-sg",
            "aws_subnet.ec2_1_public_subnet",
            "aws_subnet.ec2_2_public_subnet",
            "aws_vpc.infrastructure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-2:438384433488:targetgroup/target-group-alb/a965d2c4f13b56e9",
            "arn_suffix": "targetgroup/target-group-alb/a965d2c4f13b56e9",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-2:438384433488:targetgroup/target-group-alb/a965d2c4f13b56e9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "target-group-alb",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ef8faddeb6f8cf7b"
          },
          "dependencies": [
            "aws_vpc.infrastructure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attachment1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-2:438384433488:targetgroup/target-group-alb/a965d2c4f13b56e9-20240304054835723400000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-2:438384433488:targetgroup/target-group-alb/a965d2c4f13b56e9",
            "target_id": "i-0f37baa8ed494cb0f"
          },
          "dependencies": [
            "aws_db_instance.rds_master",
            "aws_db_subnet_group.database_subnet",
            "aws_instance.production_1_instance",
            "aws_lb_target_group.target_group_alb",
            "aws_security_group.database-sg",
            "aws_security_group.production-instance-sg",
            "aws_subnet.database_private_subnet",
            "aws_subnet.database_read_replica_private_subnet",
            "aws_subnet.ec2_1_public_subnet",
            "aws_vpc.infrastructure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attachment2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-2:438384433488:targetgroup/target-group-alb/a965d2c4f13b56e9-20240304054835776700000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-2:438384433488:targetgroup/target-group-alb/a965d2c4f13b56e9",
            "target_id": "i-075f6d81b65b3f5cd"
          },
          "dependencies": [
            "aws_db_instance.rds_master",
            "aws_db_subnet_group.database_subnet",
            "aws_instance.production_2_instance",
            "aws_lb_target_group.target_group_alb",
            "aws_security_group.database-sg",
            "aws_security_group.production-instance-sg",
            "aws_subnet.database_private_subnet",
            "aws_subnet.database_read_replica_private_subnet",
            "aws_subnet.ec2_2_public_subnet",
            "aws_vpc.infrastructure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "infrastructure_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:438384433488:route-table/rtb-0e38f715c8d8cb596",
            "id": "rtb-0e38f715c8d8cb596",
            "owner_id": "438384433488",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0060596877d5605cc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ef8faddeb6f8cf7b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.tier_architecture_igw",
            "aws_vpc.infrastructure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route-ec2-1-subnet-to-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06ed617aa14e1c92b",
            "route_table_id": "rtb-0e38f715c8d8cb596",
            "subnet_id": "subnet-019314a12f7c1d0ea"
          },
          "dependencies": [
            "aws_internet_gateway.tier_architecture_igw",
            "aws_route_table.infrastructure_route_table",
            "aws_subnet.ec2_1_public_subnet",
            "aws_vpc.infrastructure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route-ec2-2-subnet-to-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07071dc84c6102df3",
            "route_table_id": "rtb-0e38f715c8d8cb596",
            "subnet_id": "subnet-0d1aecf196e7a7f9a"
          },
          "dependencies": [
            "aws_internet_gateway.tier_architecture_igw",
            "aws_route_table.infrastructure_route_table",
            "aws_subnet.ec2_2_public_subnet",
            "aws_vpc.infrastructure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:438384433488:security-group/sg-081592b95d5f57d47",
            "description": "security  group for database to allow traffic on port 3306 and from ec2 production security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-081592b95d5f57d47",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from port 3306 and from ec2 production security group",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0e21ad06709472392"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "database-sg",
            "name_prefix": "",
            "owner_id": "438384433488",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ef8faddeb6f8cf7b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.production-instance-sg",
            "aws_vpc.infrastructure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "production-instance-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:438384433488:security-group/sg-0e21ad06709472392",
            "description": "Security from who allow inbound traffic on port 22 and 9090",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e21ad06709472392",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "production-instance-sg",
            "name_prefix": "",
            "owner_id": "438384433488",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ef8faddeb6f8cf7b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.infrastructure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:438384433488:subnet/subnet-006d3e30e4fded9d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2b",
            "availability_zone_id": "aps2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006d3e30e4fded9d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "438384433488",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "database private subnet"
            },
            "tags_all": {
              "Name": "database private subnet"
            },
            "vpc_id": "vpc-0ef8faddeb6f8cf7b"
          },
          "dependencies": [
            "aws_vpc.infrastructure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database_read_replica_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:438384433488:subnet/subnet-0401ad2249c3cff7a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0401ad2249c3cff7a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "438384433488",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "database read replica private subnet"
            },
            "tags_all": {
              "Name": "database read replica private subnet"
            },
            "vpc_id": "vpc-0ef8faddeb6f8cf7b"
          },
          "dependencies": [
            "aws_vpc.infrastructure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ec2_1_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:438384433488:subnet/subnet-019314a12f7c1d0ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2a",
            "availability_zone_id": "aps2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019314a12f7c1d0ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "438384433488",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "first ec2 public subnet"
            },
            "tags_all": {
              "Name": "first ec2 public subnet"
            },
            "vpc_id": "vpc-0ef8faddeb6f8cf7b"
          },
          "dependencies": [
            "aws_vpc.infrastructure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ec2_2_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:438384433488:subnet/subnet-0d1aecf196e7a7f9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-2b",
            "availability_zone_id": "aps2-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d1aecf196e7a7f9a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "438384433488",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "second ec2 public subnet"
            },
            "tags_all": {
              "Name": "second ec2 public subnet"
            },
            "vpc_id": "vpc-0ef8faddeb6f8cf7b"
          },
          "dependencies": [
            "aws_vpc.infrastructure_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "infrastructure_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-2:438384433488:vpc/vpc-0ef8faddeb6f8cf7b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-08cf2ee939419cbef",
            "default_route_table_id": "rtb-05b6b298a0e646cab",
            "default_security_group_id": "sg-0ab3137c4dafea197",
            "dhcp_options_id": "dopt-029d7e45907480121",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ef8faddeb6f8cf7b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05b6b298a0e646cab",
            "owner_id": "438384433488",
            "tags": {
              "Name": "2-tier-architecture-vpc"
            },
            "tags_all": {
              "Name": "2-tier-architecture-vpc"
            }
          }
        }
      ]
    }
  ]
}